more preps and fixes for windows setup